--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,20 +9,32 @@
     "ios": "expo run:ios"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.2",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@expo/vector-icons": "~14.0.4",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.7.7",
     "expo": "^52.0.0",
-    "expo-asset": "^12.0.9",
-    "expo-constants": "^16.0.2",
-    "expo-status-bar": "^2.0.0",
+    "expo-asset": "~11.0.5",
+    "expo-av": "~15.0.2",
+    "expo-camera": "~16.0.18",
+    "expo-constants": "~17.0.8",
+    "expo-dev-client": "~5.0.20",
+    "expo-font": "~13.0.4",
+    "expo-haptics": "~14.0.1",
+    "expo-image-picker": "~16.0.6",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-media-library": "~17.0.6",
+    "expo-notifications": "~0.29.14",
+    "expo-secure-store": "~14.0.1",
+    "expo-sqlite": "~15.1.4",
+    "expo-status-bar": "~2.0.1",
     "react": "^18.3.1",
     "react-native": "^0.76.0",
-    "react-native-gesture-handler": "^2.20.0",
-    "react-native-safe-area-context": "^4.14.1",
-    "react-native-screens": "^4.8.0"
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-paper": "^5.14.5",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0"
   }
 }
