--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,6 @@
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.13.0"
+    "react-native-svg": "15.8.0"
   }
 }
