--- a/frontend/app.json
+++ b/frontend/app.json
@@ -17,15 +17,16 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.yourcompany.aidreamcatcher",
+      "bundleIdentifier": "com.aidreamcatcher.app",
       "buildNumber": "1",
       "infoPlist": {
         "NSCameraUsageDescription": "This app uses the camera to take photos for dream journaling.",
-        "NSMicrophoneUsageDescription": "This app uses the microphone to record voice notes for dreams."
+        "NSMicrophoneUsageDescription": "This app uses the microphone to record voice notes for dreams.",
+        "NSPhotoLibraryUsageDescription": "This app uses the photo library to attach images to your dreams."
       }
     },
     "android": {
-      "package": "com.yourcompany.aidreamcatcher",
+      "package": "com.aidreamcatcher.app",
       "versionCode": 1,
       "permissions": [
         "android.permission.CAMERA",
@@ -36,7 +37,7 @@
       "eas": {
         "projectId": "your-project-id"
       },
-      "API_URL": "https://ai-dream-catcher-api.onrender.com"
+      "API_URL": "https://your-api-domain.com"
     },
     "privacy": "public",
     "description": "AI-powered dream journaling app that analyzes your dreams and tracks patterns to help you understand your subconscious mind.",
