--- a/frontend/app.json
+++ b/frontend/app.json
@@ -37,7 +37,7 @@
       "eas": {
         "projectId": "your-project-id"
       },
-      "API_URL": "https://your-api-domain.com"
+      "API_URL": "https://ai-dream-catcher-api.onrender.com"
     },
     "privacy": "public",
     "description": "AI-powered dream journaling app that analyzes your dreams and tracks patterns to help you understand your subconscious mind.",
