--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "expo-camera": "~16.0.18",
     "expo-constants": "~17.0.8",
     "expo-dev-client": "~5.0.20",
+    "expo-file-system": "~18.0.4",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-image-picker": "~16.0.6",
@@ -28,6 +29,7 @@
     "expo-media-library": "~17.0.6",
     "expo-notifications": "~0.29.14",
     "expo-secure-store": "~14.0.1",
+    "expo-sharing": "~13.0.2",
     "expo-sqlite": "~15.1.4",
     "expo-status-bar": "~2.0.1",
     "react": "^18.3.1",
