Fix IAP receipt verification and update onboarding pricing
- Use RNIap.getReceiptIOS() instead of purchase.transactionReceipt
- Add proper error handling for missing receipt data
- Update onboarding pricing to .99/month and .99/year
- Enhanced logging for receipt verification debugging

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -53,7 +53,7 @@
       }
     },
     "privacy": "https://aidreamcatcher.com/privacy-policy",
-    "supportUrl": "https://aidreamcatcher.com/support",
+    "supportUrl": "https://zachariah-mithani.github.io/zac-support-site",
     "description": "AI-powered dream journaling app that analyzes your dreams and tracks patterns to help you understand your subconscious mind.",
     "keywords": [
       "dream journal",
