--- a/frontend/ios/AIDreamCatcher.xcodeproj/xcshareddata/xcschemes/AIDreamCatcher.xcscheme
+++ b/frontend/ios/AIDreamCatcher.xcodeproj/xcshareddata/xcschemes/AIDreamCatcher.xcscheme
@@ -60,6 +60,9 @@
             ReferencedContainer = "container:AIDreamCatcher.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <StoreKitConfigurationFileReference
+         identifier = "../Products.storekit">
+      </StoreKitConfigurationFileReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
